--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,12 @@
-dash==2.17.1
-dash_bootstrap_components==1.6.0
-dash_daq==0.5.0
-h5py==3.10.0
-joblib==1.3.2
-keras_tuner==1.4.7
-matplotlib==3.8.2
-numpy==2.1.1
-pandas==2.2.2
-plotly==5.22.0
-protobuf==5.28.1
-pyCompare==1.5.4
-pyCompare==1.5.4
-python-dotenv==1.0.1
-scikit_learn==1.4.1.post1
-scipy==1.14.1
-seaborn==0.13.2
-setuptools==65.5.0
-shap==0.46.0
-tensorflow==2.15.0
-tensorflow_intel==2.15.0
-yellowbrick==1.5
+pandas
+numpy
+tensorflow
+keras_tuner
+seaborn
+pyCompare
+h5py
+scikit-learn
+matplotlib
+scipy
+PyWavelets
 shap
